--- a/html/main/TEST_201024.HTML
+++ b/html/main/TEST_201024.HTML
@@ -658,7 +658,7 @@
         <!-- //quick_nav -->
         <!-- quick_nav(mobile) -->
         <div class="quick_action" onclick="actionToggle();">
-            <span>+</span>
+            <span><i>+</i></span>
             <h2>주요 서비스 </h2>
             <ul class="quick-info">
                 <li><a href="#"><i class="ico-notice"></i><em class="txt">공지사항</em></a></li>
