--- a/html/donation/SB_CCK_FUNR_06_ars.html
+++ b/html/donation/SB_CCK_FUNR_06_ars.html
@@ -1,53 +1,137 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
-	<meta name="keywords" content="사랑의 열매, 사회복지공동모금회"/>
-	<meta name="description" content=""/>
-    
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="mobile-web-app-capable" content="yes">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
+
+    <meta name="keywords" content="사랑의 열매, 사회복지공동모금회" />
+    <meta name="description" content="" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="mobile-web-app-capable" content="yes">
 
     <title>사회복지공동모금회 사랑의열매</title>
 
-	<link rel="stylesheet" href="/common/css/ui.base.css">
+    <link rel="stylesheet" href="../../common/css/ui.base.css">
+    <style>
+        .donate-newlist-area {
+            display: flex;
+            flex-wrap: wrap;
+        }
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        .donate-newlist-item {
+            display: flex;
+            flex-grow: 1;
+            align-items: center;
+            justify-content: center;
+            font-weight: 600;
+            margin: 12px;
+            border-right: 1px dotted #aaa;
+        }
 
-	<script src="/common/js/ui.global.js"></script>
-	<script src="/common/js/ui.plugins.js"></script>
-	<script src="/common/js/ui.common.js"></script>
+        .donate-newlist-item:last-child {
+            border-right: 1px dotted #fff;
+        }
+
+        @media screen and (max-width: 720px) {
+
+            .donate-newlist-item {
+                width: 50%;
+                border: 1px dotted #aaa;
+                margin: 0px;
+                padding: 12px 8px;
+            }
+
+            .donate-newlist-item:last-child {
+                border: 1px dotted #aaa;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .donate-newlist-item {
+                width: 100%;
+            }
+        }
+
+
+        .donate-newlist-item i {
+            width: 65px;
+            height: 64px;
+            background-repeat: no-repeat;
+            background-size: 65px auto;
+        }
+
+        .icon-newcredit {
+            background-image: url(/common/img/contents/ico-credit.png);
+        }
+
+        .donate-newlist-item i.ico-pay {
+            background-image: url(/common/img/contents/ico-pay.png);
+        }
+
+        .donate-newlist-item i.ico-phone {
+            background-image: url(/common/img/contents/ico-phone.png);
+        }
+
+        .donate-newlist-item i.ico-passbook {
+            background-image: url(/common/img/contents/ico-bank.png);
+        }
+
+        .item-new-txt {
+            padding-left: 16px;
+            text-align: left;
+        }
+
+        .donate-newlist-item p {
+            font-size: 14px;
+            line-height: 18px;
+            color: #252525;
+        }
+
+        .donate-newlist-item strong {
+            padding-top: 8px;
+            line-height: 38px;
+            font-weight: 600;
+            font-size: 18px;
+            color: #cb0802;
+        }
+    </style>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script src="../../common/js/ui.global.js"></script>
+    <script src="../../common/js/ui.plugins.js"></script>
+    <script src="../../common/js/ui.common.js"></script>
 
 </head>
 
-<body>	
-	<div class="base-skip" id="baseSkip"></div>
-	<div class="base-layer" id="baseLayer"></div>
-	<div class="base-wrap" id="baseWrap">
-		<header class="base-header" id="baseHeader"></header>
-		<div class="base-body type-sub" id="baseBody">
-			<div class="sub-visual visual02_01">
-				<div class="sub-title-area">
-					<h2 class="heading-title-a">일시기부</h2>
-					<p class="title-sub-txt">2depth 설명글 수급 중입니다.</p>
-				</div>
-			</div>
-			<div class="base-breadcrumbs" id="baseBreadcrumbs"></div>
-			<main class="base-main" id="baseMain">
-				<div class="contents-area">
-					<div class="contents-hd">
-						<h3><strong>ARS/문자</strong><span>당신의 나눔이 모두의 행복입니다. 나눔의 힘을 믿어보세요.</span></h3>
-						<div class="contents-menu-nav">
-							<button type="button" class="prev-menu">카드/계좌이체/포인트</button>
-						</div>
-					</div>
+<body>
+    <div class="base-skip" id="baseSkip"></div>
+    <div class="base-layer" id="baseLayer"></div>
+    <div class="base-wrap" id="baseWrap">
+        <header class="base-header" id="baseHeader"></header>
+        <div class="base-body type-sub" id="baseBody">
+            <div class="sub-visual visual02_01">
+                <div class="sub-title-area">
+                    <h2 class="heading-title-a">일시기부</h2>
+                    <p class="title-sub-txt">2depth 설명글 수급 중입니다.</p>
+                </div>
+            </div>
+            <div class="base-breadcrumbs" id="baseBreadcrumbs"></div>
+            <main class="base-main" id="baseMain">
+                <div class="contents-area">
+                    <div class="contents-hd">
+                        <h3><strong>ARS/문자</strong><span>당신의 나눔이 모두의 행복입니다. 나눔의 힘을 믿어보세요.</span></h3>
+                        <div class="contents-menu-nav">
+                            <button type="button" class="prev-menu">카드/계좌이체/포인트</button>
+                        </div>
+                    </div>
 
-					<div class="seo-box">
-						<div class="ars-area">
+                    <div class="seo-box">
+                        <div class="ars-area">
                             <p class="ars_txt">사랑을 나누는 가장 쉬운 방법, ARS와 문자로 나눔을 실천해보세요.</p>
                             <ul class="ars-list">
                                 <li class="ars-item">
@@ -66,7 +150,47 @@
                         </div>
                         <div class="donate-list">
                             <p class="donate-tit">기부정보확인 서비스가 완료되는데 소요되는 기간</p>
-                            <div class="donate-list-area">
+                            <!-- 4array items -->
+                            <div class="donate-newlist-area">
+                                <div class="donate-newlist-item">
+                                    <i class="ico-pay"></i>
+                                    <div class="item-new-txt">
+                                        <p>네이버페이/<br>카카오페이</p>
+                                        <strong>10일 이후</strong>
+                                    </div>
+                                </div>
+                                <div class="donate-newlist-item">
+                                    <i class="icon-newcredit"></i>
+                                    <div class="item-new-txt">
+                                        <p>신용카드 기부<br>온라인계좌이체 기부</p>
+                                        <strong>12월 16일 이전</strong>
+                                    </div>
+                                </div>
+                                <div class="donate-newlist-item">
+                                    <i class="ico-phone"></i>
+                                    <div class="item-new-txt">
+                                        <p>휴대폰 기부</p>
+                                        <strong>90일 이후</strong>
+                                    </div>
+                                </div>
+                                <div class="donate-newlist-item">
+                                    <i class="ico-passbook"></i>
+                                    <div class="item-new-txt">
+                                        <p>무통장입금 기부</p>
+                                        <strong>3일 이후</strong>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!-- //4array items-->
+                            <!-- <div class="donate-list-area">
+                                <div class="donate-list-item">
+                                    <i class="ico-credit"></i>
+                                    <div class="item-txt">
+                                        <p>신용카드 기부<br>온라인계좌이체 기부</p>
+                                        <strong>12월 16일 이전</strong>
+                                    </div>
+                                </div>
                                 <div class="donate-list-item">
                                     <i class="ico-credit"></i>
                                     <div class="item-txt">
@@ -88,8 +212,9 @@
                                         <strong>3일 이후</strong>
                                     </div>
                                 </div>
-                            </div>
-                            <p class="donate-desc">홈페이지 상에서 기부정보내역을 3일 안에 확인하고 싶으신 분은 <span>무통장 입금</span>을 선택해 주세요.<br>단, 무통장 입금 후 해당 지회로 전화하여 기부자정보 를 알려주셔야 합니다.</p>
+                            </div> -->
+                            <p class="donate-desc">홈페이지 상에서 기부정보내역을 3일 안에 확인하고 싶으신 분은 <span>무통장 입금</span>을 선택해
+                                주세요.<br>단, 무통장 입금 후 해당 지회로 전화하여 기부자정보 를 알려주셔야 합니다.</p>
                         </div>
                         <p class="select-sub-tit type2">무통장 입금 기부</p>
                         <div class="fake-table-box type2">
@@ -154,11 +279,11 @@
                                     <p class="account-holder"><span>예금주 :</span>충청북도공동모금회</p>
                                 </dt>
                                 <dd class="fake-table-td">
-                                    <p>농협 :  313-01-122113</p>
+                                    <p>농협 : 313-01-122113</p>
                                     <p>신한은행 : 100-013-376628</p>
                                     <p>국민은행 : 704301-01-002070</p>
-                                    <p>우체국 :  300038-01-004702</p>
-                                    <p>기업은행 :  293-056997-01-014</p>
+                                    <p>우체국 : 300038-01-004702</p>
+                                    <p>기업은행 : 293-056997-01-014</p>
                                     <p>하나은행 : 603-910013-06904</p>
                                 </dd>
                             </dl>
@@ -430,33 +555,34 @@
                         <div class="banner-img">
                             <img src="/common/img/contents/banner_img.jpg" alt="기부관련 상담을 원하시나요? 나눔콜센터 080-890-1212">
                         </div>
-					</div>
-				</div>
-			</main>
-		</div>
-		
-		<footer class="base-footer" id="baseFooter"></footer>
-        <div class="box-wing" id="rightWing"></div>
-	</div>
+                    </div>
+                </div>
+            </main>
+        </div>
 
-	<script>
-        (function($, win, doc, undefined) {
-            $(doc).ready(function(){
+        <footer class="base-footer" id="baseFooter"></footer>
+        <!-- <div class="box-wing" id="rightWing"></div> -->
+    </div>
 
-				//필수실행
-				//메뉴는 00 부터 시작
+    <script>
+        (function ($, win, doc, undefined) {
+            $(doc).ready(function () {
+
+                //필수실행
+                //메뉴는 00 부터 시작
                 $plugins.common.init({
-					menuid: '01_01_01' //1depth_2depth_3depth
-				});
-				
+                    menuid: '01_01_01' //1depth_2depth_3depth
+                });
+
             });
 
-			//tab
-			$plugins.uiTab({
-				id:'uiTabguide1',
-				current:1
-			});
+            //tab
+            $plugins.uiTab({
+                id: 'uiTabguide1',
+                current: 1
+            });
         })(jQuery, window, document);
-	</script>
+    </script>
 </body>
+
 </html>
