--- a/101_elle/2-3(cordinates)/index.html
+++ b/101_elle/2-3(cordinates)/index.html
@@ -6,11 +6,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coordinates</title>
+    <style>
+        html {
+            background-color: black;
+        }
+
+        div {
+            width: 250px;
+            height: 250px;
+            background-color: aliceblue;
+            margin-bottom: 6px;
+            border-radius: 6px;
+        }
+
+        .special {
+            background-color: palevioletred;
+        }
+
+        aside {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+        }
+    </style>
 </head>
 
 <body>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div class="special"></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <aside>
+        <button class="scroll-by">scroll-by</button>
+        <button class="scroll-to">scroll-to</button>
+        <button class="scroll-into">scroll-into</button>
+    </aside>
+    <script>
+        const special = document.querySelector('.special');
 
+
+        special.addEventListener('click', (event) => {
+            const rect = special.getBoundingClientRect();
+            console.log(rect);
+            console.log(`client: ${event.clientX}, ${event.clientY} `);
+            console.log(`page: ${event.pageX}, ${event.pageY} `);
+        });
+
+
+        const sBy = document.querySelector('.scroll-by');
+        const sTp = document.querySelector('.scroll-to');
+        const sInto = document.querySelector('.scroll-into');
+
+
+        sBy.addEventListener('click', () => {
+            window.scrollBy({
+                top: 100,
+                left: 0,
+                behavior: "smooth"
+            });
+
+        });
+
+        sTp.addEventListener('click', () => {
+            window.scrollTo(0, 100);
+
+        });
+
+        sInto.addEventListener('click', () => {
+            special.scrollIntoView();
+        });
+    </script>
 </body>
 
 </html>
