--- a/JSCR_278-master/JSCR_278-master/c14/234/index.html
+++ b/JSCR_278-master/JSCR_278-master/c14/234/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>샘플</title>
-  <link rel="stylesheet" href="style_city.css"/>
+  <link rel="stylesheet" href="../common/style_city.css" />
   <script src="main.js" defer></script>
 
 </head>
+
 <body>
 
   <main>
@@ -17,4 +19,5 @@
     </pre>
   </main>
 </body>
+
 </html>
