--- a/101_elle/2-4(shopping)/index.html
+++ b/101_elle/2-4(shopping)/index.html
@@ -14,7 +14,7 @@
     <section class="list">
         <header class="header">shopping List</header>
         <ul class="items">
-            <li class="item__row">
+            <!-- <li class="item__row">
                 <div class="item">
                     <span class="item__name">Egg</span>
                     <button class="item__delete">
@@ -22,7 +22,7 @@
                     </button>
                 </div>
                 <div class="item__divider"></div>
-            </li>
+            </li> -->
         </ul>
         <footer class="footer">
             <input type="text" class="footer__input">
