--- a/101_elle/4-0/carrot/index.html
+++ b/101_elle/4-0/carrot/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Game</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
     <script src="https://kit.fontawesome.com/f56e172c33.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section class="game">
         <header class="game__header">
@@ -19,11 +21,12 @@
         </header>
         <section class="game__field"></section>
     </section>
-    <section class="pop-up">
+    <section class="pop-up pop-up--hide">
         <button class="pop-up__refresh">
             <i class="fas fa-redo"></i>
         </button>
         <span class="pop-up__message">Hello</span>
     </section>
 </body>
+
 </html>
