--- a/101_elle/4-0/carrot/index.html
+++ b/101_elle/4-0/carrot/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Game</title>
+    <link rel="stylesheet" href="style.css"/>
     <script src="main.js" defer></script>
     <script src="https://kit.fontawesome.com/f56e172c33.js" crossorigin="anonymous"></script>
 </head>
