--- a/apple-clone-v9/apple-clone-v9/index.html
+++ b/apple-clone-v9/apple-clone-v9/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body class="before-load">
 	<div class="loading">
 		<svg class="loading-circle">
@@ -53,7 +55,21 @@
 		<section class="scroll-section" id="scroll-section-1">
 			<p class="description">
 				<strong>보통 스크롤 영역</strong>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae est ipsa minima, eligendi error cum vel dolorum pariatur officia facilis ipsam voluptatibus ad quasi porro quod quisquam quidem tempora accusantium accusamus, quaerat aliquam velit exercitationem incidunt? Id vitae quisquam saepe quasi accusantium tempore enim! Aperiam dolorum a vero repellat dolor, inventore ab odit totam molestias expedita? Enim quia dolor maiores veniam ea! Quam illo, est incidunt ipsa reiciendis modi quisquam reprehenderit fuga velit dolorem odit sequi autem blanditiis, ullam commodi quibusdam. Accusamus repellat aperiam quis neque laudantium, dignissimos hic nisi magnam praesentium enim beatae sint architecto cum numquam inventore rerum animi sed nostrum quae delectus, voluptas molestiae placeat aliquid! Vel quaerat error officiis magnam dolorum iste aspernatur at est! Quo, consequuntur? Reiciendis, dolor. Quo at cupiditate in iure obcaecati voluptatum vel ea! Ab vel harum facere hic fuga ducimus sapiente dolore dolorem, nobis sint perferendis cumque esse! Omnis fugiat sint error laborum eveniet labore nam ducimus quisquam in repudiandae impedit excepturi dignissimos tenetur libero placeat rerum maxime tempore, aut nihil. Qui, quam? Voluptate fuga possimus itaque quas nesciunt iste, facilis mollitia illo qui placeat temporibus inventore obcaecati. Recusandae, sequi dignissimos in natus eum maiores dolorem, deleniti nobis accusantium, aspernatur beatae.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae est ipsa minima, eligendi error cum vel
+				dolorum pariatur officia facilis ipsam voluptatibus ad quasi porro quod quisquam quidem tempora
+				accusantium accusamus, quaerat aliquam velit exercitationem incidunt? Id vitae quisquam saepe quasi
+				accusantium tempore enim! Aperiam dolorum a vero repellat dolor, inventore ab odit totam molestias
+				expedita? Enim quia dolor maiores veniam ea! Quam illo, est incidunt ipsa reiciendis modi quisquam
+				reprehenderit fuga velit dolorem odit sequi autem blanditiis, ullam commodi quibusdam. Accusamus
+				repellat aperiam quis neque laudantium, dignissimos hic nisi magnam praesentium enim beatae sint
+				architecto cum numquam inventore rerum animi sed nostrum quae delectus, voluptas molestiae placeat
+				aliquid! Vel quaerat error officiis magnam dolorum iste aspernatur at est! Quo, consequuntur?
+				Reiciendis, dolor. Quo at cupiditate in iure obcaecati voluptatum vel ea! Ab vel harum facere hic fuga
+				ducimus sapiente dolore dolorem, nobis sint perferendis cumque esse! Omnis fugiat sint error laborum
+				eveniet labore nam ducimus quisquam in repudiandae impedit excepturi dignissimos tenetur libero placeat
+				rerum maxime tempore, aut nihil. Qui, quam? Voluptate fuga possimus itaque quas nesciunt iste, facilis
+				mollitia illo qui placeat temporibus inventore obcaecati. Recusandae, sequi dignissimos in natus eum
+				maiores dolorem, deleniti nobis accusantium, aspernatur beatae.
 			</p>
 		</section>
 		<section class="scroll-section" id="scroll-section-2">
@@ -68,7 +84,8 @@
 			</div>
 			<div class="sticky-elem desc-message b">
 				<p>
-					편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
+					편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가
+					댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
 				</p>
 				<div class="pin"></div>
 			</div>
@@ -87,7 +104,14 @@
 			</p>
 			<canvas class="image-blend-canvas" width="1920" height="1080"></canvas>
 			<p class="canvas-caption">
-				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam impedit et, ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia. Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero illo magni possimus temporibus dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique quas earum laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt delectus. Sapiente rerum neque error deleniti quis, et, quibusdam, est autem voluptate rem voluptas. Ratione soluta similique harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione obcaecati.
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet at fuga quae perspiciatis veniam
+				impedit et, ratione est optio porro. Incidunt aperiam nemo voluptas odit quisquam harum in mollitia.
+				Incidunt minima iusto in corporis, dolores velit. Autem, sit dolorum inventore a rerum distinctio vero
+				illo magni possimus temporibus dolores neque adipisci, repudiandae repellat. Ducimus accusamus similique
+				quas earum laborum. Autem tempora repellendus asperiores illum ex! Velit ea corporis odit? Ea, incidunt
+				delectus. Sapiente rerum neque error deleniti quis, et, quibusdam, est autem voluptate rem voluptas.
+				Ratione soluta similique harum nihil vel. Quas inventore perferendis iusto explicabo animi eos ratione
+				obcaecati.
 			</p>
 		</section>
 		<footer class="footer">
@@ -97,4 +121,5 @@
 
 	<script src="js/main.js"></script>
 </body>
+
 </html>
