--- a/zocoding/01/04_baseball/index.html
+++ b/zocoding/01/04_baseball/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>숫자야구</title>
+    <title>baseball_N</title>
 </head>
+
 <body>
     <!-- <h1>1스트라이크 1볼</h1>
     <form>
@@ -13,4 +15,5 @@
     </form> -->
     <script src="ball.js"></script>
 </body>
+
 </html>
