--- a/zocoding/01/05_tictactoc/index.html
+++ b/zocoding/01/05_tictactoc/index.html
@@ -17,6 +17,8 @@
             border-collapse: collapse;
             border-spacing: 0;
             background-image: none;
+            font-size: 26px;
+            text-align: center;
         }
 
         td {
