--- a/js_100/index.html
+++ b/js_100/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 
-<body>
-    <script src="src/92.js"></script>
+<body placehoder="">
+    <script src="src/95.js"></script>
 </body>
 
 </html>
